--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<body>
 		<div class="card">
 			<div class="card__img">
-				<img src="NguyenQuy.jpg" alt="">
+				<img src="405122517_122162826530001795_936911120432135_n.jpg" alt="">
 			</div>
 
 			<h2>Bảo Khánh</h2>
@@ -37,6 +37,10 @@
                 
                 <a target="_blank" href="https://open.spotify.com/user/31awoajkzgdrxdrp3g2t2kis7kxq">
 					<i class="fab fa-spotify"></i>
+				</a>
+
+				<a target="_blank" href="https://www.tiktok.com/@zurizin.1">
+					<i class="fab fa-tiktok"></i>
 				</a>
 
 				
